fix: ensure version_tag is picked up

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -369,6 +369,6 @@ jobs:
           allowUpdates: true
           tag: ${{ github.ref_name }}
 
-  update-source:
+  ios-source-build:
     needs: build-ios
     uses: ./.github/workflows/update_sideloading_source.yml
