--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ryan.anymex">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ryan.anymexbeta">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -10,7 +10,7 @@
     <uses-feature android:name="android.software.leanback" android:required="false" />
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
-    <application android:label="AnymeX" 
+    <application android:label="AnymeX β" 
         android:name="${applicationName}" 
         android:roundIcon="@mipmap/ic_rounded_launcher" 
         android:icon="@mipmap/ic_launcher"
