--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,7 +115,18 @@ jobs:
       - name: Get Dependencies
         run: flutter pub get
 
+      - name: Setup Signing Files
+        env:
+          P12_BASE64: ${{ secrets.P12_CERTIFICATE }}
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE }}
+        run: |
+          echo "$P12_BASE64" | base64 -d > certificate.p12
+          echo "$PROVISIONING_PROFILE_BASE64" | base64 -d > profile.mobileprovision
+          chmod +x ./scripts/sign-ipa.sh
+
       - name: Build iOS
+        env:
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
         run: |
           flutter build ios --release --no-codesign
           cd build/ios/iphoneos
@@ -123,8 +134,17 @@ jobs:
           cd Payload
           ln -s ../Runner.app
           cd ..
-          zip -r AnymeX-iOS-${{ github.ref_name }}.ipa Payload
-          mv AnymeX-iOS-${{ github.ref_name }}.ipa ../../../
+          zip -r AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa Payload
+          cd ../../../
+          ./scripts/sign-ipa.sh build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa ./certificate.p12 "$P12_PASSWORD" ./profile.mobileprovision ./AnymeX-iOS-${{ github.ref_name }}.ipa
+          echo "SIGNING_SUCCESS=true" >> $GITHUB_OUTPUT
+        continue-on-error: true
+
+      - name: Handle iOS Signing Failure
+        if: steps.build_ios.outputs.SIGNING_SUCCESS != 'true'
+        run: |
+          echo "IPA signing failed, taking alternative action..."
+          mv "build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}-unsigned.ipa" ./"AnymeX-iOS-${{ github.ref_name }}.ipa"
 
       - name: Release iOS IPA
         uses: ncipollo/release-action@v1
