--- a/.github/workflows/update_sideloading_source.yml
+++ b/.github/workflows/update_sideloading_source.yml
@@ -36,7 +36,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add .
+          git add repo/source.json
           if git diff --cached --quiet; then
             echo "No changes detected, skipping commit."
           else
