--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       - "v*"
   workflow_dispatch:
 
+env:
+  ZSIGN_VERSION: '0.7'
+
 jobs:
   build-android:
     runs-on: ubuntu-latest
@@ -115,21 +118,32 @@ jobs:
       - name: Get Dependencies
         run: flutter pub get
 
+      - name: Setup Signing Files
+        env:
+          P12_BASE64: ${{ secrets.P12_CERTIFICATE }}
+          PROVISIONING_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE }}
+        run: |
+          echo "$P12_BASE64" | base64 -d > certificate.p12
+          echo "$PROVISIONING_PROFILE_BASE64" | base64 -d > profile.mobileprovision
+          curl -L -o zsign.zip "https://github.com/zhlynn/zsign/releases/download/v${{ env.ZSIGN_VERSION }}/zsign-v${{ env.ZSIGN_VERSION }}-macos-x64.zip"
+          unzip zsign.zip
+          chmod +x zsign || chmod +x zsign-*
+
       - name: Build iOS
+        env:
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
         run: |
           flutter build ios --release --no-codesign
+          mkdir -p build/ios/iphoneos/Payload
+          ln -s ../Runner.app build/ios/iphoneos/Payload/Runner.app
+          ./zsign -f -k ./certificate.p12 -p "$P12_PASSWORD" -m ./profile.mobileprovision ./build/ios/iphoneos/Payload/Runner.app
           cd build/ios/iphoneos
-          mkdir -p Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r AnymeX-iOS-${{ github.ref_name }}.ipa Payload
-          mv AnymeX-iOS-${{ github.ref_name }}.ipa ../../../
+          zip -r ./AnymeX-iOS-${{ github.ref_name }}.ipa Payload
 
       - name: Release iOS IPA
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "AnymeX-iOS-${{ github.ref_name }}.ipa"
+          artifacts: "./build/ios/iphoneos/AnymeX-iOS-${{ github.ref_name }}.ipa"
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           tag: ${{ github.ref_name }}
