--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
     git:
       url: https://github.com/leanflutter/uni_links_desktop.git
       ref: main
+  outlined_text: ^1.0.1
 
 dev_dependencies:
   flutter_test:
