chore: app name change

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-feature android:name="android.software.leanback" android:required="false" />
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
-    <application android:label="AnymeX β" 
+    <application android:label="AnymeX" 
         android:name="${applicationName}" 
         android:roundIcon="@mipmap/ic_rounded_launcher" 
         android:icon="@mipmap/ic_launcher"
