--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,87 +7,86 @@ environment:
   sdk: ">=3.4.4 <4.0.0"
 
 dependencies:
+  algorithmic: ^0.0.11
+  blur: ^4.0.0
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  checkmark: ^0.0.2+1
+  crypto: any
+  dart_eval: ^0.7.10
+  device_info_plus: ^11.2.2
+  dio: ^5.8.0+1
   dynamic_color: ^1.7.0
+  encrypt: ^5.0.3
+  expandable_page_view: ^1.0.17
+  extended_image: ^9.1.0
+  file_picker: ^8.1.7
   flutter:
     sdk: flutter
-  get: ^4.6.6
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  http: ^1.2.2
-  iconsax: ^0.0.8
-  permission_handler: ^11.3.1
+  flutter_dotenv: ^5.2.1
+  flutter_inappwebview: ^6.1.5
   flutter_local_notifications: ^18.0.1
-  flutter_web_auth_2: ^4.0.2
-  media_kit: ^1.1.10+1
-  media_kit_video: ^1.2.4
-  media_kit_libs_video: ^1.0.4
-  window_manager: ^0.4.3
-  http_interceptor: ^2.0.0
-  js_packer: ^0.0.5
-  xpath_selector_html_parser: ^3.0.1
-  dart_eval: ^0.7.10
+  flutter_markdown: ^0.7.6
+  flutter_native_splash: ^2.4.4
   flutter_qjs:
     git:
       url: https://github.com/kodjodevf/flutter_qjs.git
       ref: main
-  json_annotation: ^4.9.0
-  isar: ^3.1.0+1
-  json_path: ^0.7.4
+  flutter_riverpod: ^2.6.1
+  flutter_rust_bridge: ^2.7.0
+  flutter_web_auth_2: ^4.0.2
+  freezed_annotation: ^2.4.4
+  get: ^4.6.6
+  grouped_list: ^6.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  html: any
+  http: ^1.2.2
+  http_interceptor: ^2.0.0
+  hugeicons: ^0.0.7
+  iconly: ^1.0.1
+  iconsax: ^0.0.8
+  install_plugin: ^2.1.0
   intl: ^0.20.1
+  isar: ^3.1.0+1
   isar_flutter_libs:
     git:
       url: https://github.com/MrLittleWhite/isar_flutter_libs.git
-  riverpod_annotation: ^2.6.1
-  pseudom: ^1.0.1
-  flutter_rust_bridge: ^2.7.0
-  freezed_annotation: ^2.4.4
-  flutter_riverpod: ^2.6.1
-  grouped_list: ^6.0.0
-  volume_controller: ^2.0.8
-  screen_brightness: ^0.2.2+1
-  encrypt: ^5.0.3
-  iconly: ^1.0.1
-  hugeicons: ^0.0.7
-  cached_network_image: ^3.4.1
-  provider: ^6.1.2
-  shimmer: ^3.0.0
-  expandable_page_view: ^1.0.17
-  checkmark: ^0.0.2+1
-  flutter_inappwebview: ^6.1.5
-  extended_image: ^9.1.0
-  carousel_slider: ^5.0.0
-  smooth_page_indicator: ^1.2.0+3
-  blur: ^4.0.0
-  file_picker: ^8.1.7
-  algorithmic: ^0.0.11
-  flutter_dotenv: ^5.2.1
+  js_packer: ^0.0.5
+  json_annotation: ^4.9.0
+  json_path: ^0.7.4
   kenburns_nullsafety: ^1.0.1
-  flutter_markdown: ^0.7.6
-  device_info_plus: ^11.2.2
+  media_kit: ^1.1.10+1
+  media_kit_libs_video: ^1.0.4
+  media_kit_video: ^1.2.4
+  outlined_text: ^1.0.1
+  package_info_plus: any
+  path: any
+  path_provider: any
+  permission_handler: ^11.3.1
+  provider: ^6.1.2
+  pseudom: ^1.0.1
+  riverpod_annotation: ^2.6.1
+  screen_brightness: ^0.2.2+1
+  shimmer: ^3.0.0
+  smooth_page_indicator: ^1.2.0+3
+  super_sliver_list: ^0.4.1
   uni_links: ^0.5.1
   uni_links_desktop: any
-  outlined_text: ^1.0.1
-  super_sliver_list: ^0.4.1
-
-  html: any
-  path: any
-  crypto: any
-  path_provider: any
-  package_info_plus: any
   url_launcher: any
-  dio: ^5.8.0+1
-  install_plugin: ^2.1.0
+  volume_controller: ^2.0.8
+  window_manager: ^0.4.3
+  xpath_selector_html_parser: ^3.0.1
+
 dev_dependencies:
+  build_runner: ^2.4.11
+  change_app_package_name: ^1.4.0
+  flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.14.2
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  build_runner: ^2.4.11
   hive_generator: ^2.0.1
-  change_app_package_name: ^1.4.0
   inno_bundle: ^0.7.4
-  flutter_launcher_icons: ^0.14.2
-  rename_app: ^1.6.2
-
 
 flutter_launcher_icons:
   android: false
@@ -100,6 +99,14 @@ flutter_launcher_icons:
   macos:
     generate: false
     image_path: "assets/images/logo.png"
+
+flutter_native_splash:
+  fullscreen: true
+  color: "#000000"
+  image: assets/images/logo.png
+  android_12:
+    color: "#000000"
+    image: assets/images/logo.png
 
 flutter:
   uses-material-design: true
@@ -120,6 +127,7 @@ flutter:
     - family: Poppins-Bold
       fonts:
         - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+
 inno_bundle:
   id: 8fbd47cb-d6e1-5343-a9f6-61661647c94c
   publisher: Ryan Yuuki
