--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,13 @@ dependencies:
   json_annotation: ^4.9.0
   json_path: ^0.7.4
   kenburns_nullsafety: ^1.0.1
-  media_kit: ^1.1.10+1
-  media_kit_libs_video: ^1.0.4
-  media_kit_video: ^1.2.4
+
+  
+  # repo => https://github.com/media-kit/media-kit
+  media_kit: ^1.2.0
+  media_kit_libs_video: ^1.0.6
+  media_kit_video: ^1.2.5
+
   outlined_text: ^1.0.1
   package_info_plus: any
   path: any
