--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -3,10 +3,10 @@ name: changelog
 on:
   workflow_run:
     workflows:
-      - "Build and Release AnymeX" # Name of the triggering workflow
+      - "Build and Release AnymeX"
     types:
       - completed
-  workflow_dispatch: # Allow manual triggering of this workflow
+  workflow_dispatch:
 
 jobs:
   notify:
@@ -17,26 +17,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-    
-     # Clear existing CHANGELOG.md
+
       - name: Clear CHANGELOG.md
         run: |
-          echo ""> CHANGELOG.md
-          echo "" >> CHANGELOG.md
-    
+          echo "" > CHANGELOG.md
+
       - name: Get previous tag
         id: get_prev_tag
         run: |
           echo "Getting the previous tag..."
-          PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
-          echo "Previous tag retrieved: $PREV_TAG"
-          if [ -z "$PREV_TAG" ]; then
-            echo "No previous tag found, using the initial commit."
-            PREV_TAG=$(git rev-list --max-parents=0 HEAD)
-          fi
+          PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || git rev-list --max-parents=0 HEAD)
           echo "prev_tag=$PREV_TAG" >> $GITHUB_ENV
           echo "Previous tag: $PREV_TAG"
-          
+
+      - name: Debug commit log
+        run: |
+          echo "Commits: $(git log ${{ env.prev_tag }}..HEAD --pretty=format:'%h %s')"
+
       - name: Get commit messages between tags
         id: get_commits
         run: |
@@ -44,6 +41,7 @@ jobs:
           COMMITS=$(git log ${{ env.prev_tag }}..HEAD --pretty=format:'%h %s' | tr '\n' '|')
           echo "Commits retrieved: $COMMITS"
           echo "commits=$COMMITS" >> $GITHUB_ENV
+
       - name: Categorize commits
         id: categorize
         run: |
@@ -55,14 +53,12 @@ jobs:
           PERFORMANCE=""
           CHORES=""
           REPO_URL="https://github.com/${{ github.repository }}"
-    
+
           IFS='|' read -ra COMMIT_LIST <<< "${{ env.commits }}"
-          echo "Commit list: ${COMMIT_LIST[@]}"
           for LINE in "${COMMIT_LIST[@]}"; do
             HASH=$(echo "$LINE" | awk '{print $1}')
             MESSAGE=$(echo "$LINE" | cut -d' ' -f2-)
             LINK="[$HASH]($REPO_URL/commit/$HASH)"
-
             FORMATTED_COMMIT="* $LINK: $MESSAGE"
             echo "Processing commit: $FORMATTED_COMMIT"
             if [[ $MESSAGE == feat* ]]; then
@@ -105,30 +101,30 @@ jobs:
             echo -e "$CHORES" >> CHANGELOG.md
           fi
 
+      - name: Debug CHANGELOG.md
+        run: cat CHANGELOG.md
+
       - name: Commit and push changelog
         run: |
           echo "Committing and pushing changelog..."
-          git config --global user.name "GitHub Actions"
+          git config --global user.name "Git Paneer"
           git config --global user.email "actions@github.com"
           git add CHANGELOG.md
-          git commit -m "Update changelog for version ${{ github.ref_name }}"
+          git commit --allow-empty -m "Update changelog for version ${{ github.ref_name }}"
           git push origin HEAD:main
 
-        # Step 2: Get the latest tag
       - name: Get latest tag
         id: get_tag
         run: |
-          # Fetch all tags
           git fetch --tags
-          # Get the latest tag
           TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
           echo "latest_tag=$TAG" >> $GITHUB_ENV
+          echo "Latest tag: $TAG"
 
-      # Step 4: Run release action with the latest tag
       - name: Create or Update Release
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           bodyFile: CHANGELOG.md
-          tag: ${{ env.latest_tag }} # Use the latest tag
+          tag: ${{ env.latest_tag }}
           allowUpdates: true
