--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  ZSIGN_VERSION: '0.7'
+  ZSIGN_VERSION: "0.7"
 
 jobs:
   build-android:
@@ -466,3 +466,73 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           tag: ${{ github.ref_name }}
+
+  update-scoop-manifest:
+    needs: build-windows
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Download Windows Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: artifacts
+          path: artifacts
+
+      - name: Calculate SHA256 Hash
+        run: |
+          sha256sum artifacts/AnymeX-Windows.zip | awk '{print $1}' > hash.txt
+          echo "HASH=$(cat hash.txt)" >> $GITHUB_ENV
+
+      - name: Update Scoop Manifest
+        env:
+          VERSION: ${{ github.ref_name }}
+        run: |
+          mkdir -p bucket
+          cat <<EOF > bucket/anymex.json
+          {
+              "version": "${VERSION#v}",
+              "description": "An Open Source app for Tracking Multi Service (AL, MAL, SIMKL)",
+              "homepage": "https://github.com/RyanYuuki/AnymeX",
+              "license": "MIT",
+              "architecture": {
+                  "64bit": {
+                      "url": "https://github.com/RyanYuuki/AnymeX/releases/download/${VERSION}/AnymeX-Windows.zip",
+                      "hash": "${{ env.HASH }}"
+                  }
+              },
+              "bin": "anymex.exe",
+              "shortcuts": [
+                  ["anymex.exe", "AnymeX"]
+              ],
+              "checkver": {
+                  "github": "https://github.com/RyanYuuki/AnymeX"
+              },
+              "autoupdate": {
+                  "architecture": {
+                      "64bit": {
+                          "url": "https://github.com/RyanYuuki/AnymeX/releases/download/v$version/AnymeX-Windows.zip"
+                      }
+                  }
+              }
+          }
+          EOF
+
+      - name: Setup Git
+        run: |
+          git config user.name "RyanYuuki"
+          git config user.email "108048963+RyanYuuki@users.noreply.github.com"
+
+      - name: Commit and Push to Scoop Bucket
+        env:
+          GITHUB_TOKEN: ${{ secrets.SCOOP_GITHUB_TOKEN }}
+        run: |
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/MiraiEnoki/Anymex_Scoop.git scoop-bucket
+          cd scoop-bucket
+          mkdir -p bucket
+          cp ../bucket/anymex.json bucket/
+          git add bucket/anymex.json
+          git commit -m "anymex@${VERSION#v}: Update to version ${VERSION#v}" || echo "No changes to commit"
+          git push origin main
+          gh pr create --repo ScoopInstaller/Main --title "anymex@${VERSION#v}: Update to version ${VERSION#v}" --body "Automated update of AnymeX manifest to version ${VERSION#v}" --base main --head MiraiEnoki:main || echo "PR creation skipped or failed"
