--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  ZSIGN_VERSION: '0.7'
+  ZSIGN_VERSION: "0.7"
 
 jobs:
   build-android:
@@ -403,18 +403,18 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-  
+
       - name: Download Windows Artifact
         uses: actions/download-artifact@v3
         with:
           name: artifacts
           path: artifacts
-  
+
       - name: Calculate SHA256 Hash
         run: |
           sha256sum artifacts/AnymeX-Windows.zip | awk '{print $1}' > hash.txt
           echo "HASH=$(cat hash.txt)" >> $GITHUB_ENV
-  
+
       - name: Update Scoop Manifest
         env:
           VERSION: ${{ github.ref_name }}
@@ -448,12 +448,12 @@ jobs:
               }
           }
           EOF
-  
+
       - name: Setup Git
         run: |
           git config user.name "RyanYuuki"
           git config user.email "108048963+RyanYuuki@users.noreply.github.com"
-  
+
       - name: Commit and Push to Scoop Bucket
         env:
           GITHUB_TOKEN: ${{ secrets.SCOOP_GITHUB_TOKEN }}
@@ -466,3 +466,73 @@ jobs:
           git commit -m "anymex@${VERSION#v}: Update to version ${VERSION#v}" || echo "No changes to commit"
           git push origin main
           gh pr create --repo ScoopInstaller/Main --title "anymex@${VERSION#v}: Update to version ${VERSION#v}" --body "Automated update of AnymeX manifest to version ${VERSION#v}" --base main --head MiraiEnoki:main || echo "PR creation skipped or failed"
+
+  build-chocolatey:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.27.4"
+
+      - name: Install Chocolatey
+        run: |
+          Set-ExecutionPolicy Bypass -Scope Process -Force
+          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
+          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+
+      - name: Get Latest Release Info
+        id: get_release
+        run: |
+          $release = (Invoke-RestMethod -Uri "https://api.github.com/repos/RyanYuuki/AnymeX/releases/latest")
+          $exe_asset = $release.assets | Where-Object { $_.name -match 'AnymeX-x86_64-([\d.]+)-Installer\.exe' }
+          if (-not $exe_asset) { throw "No matching installer found" }
+          $version = $matches[1]
+          $exe_url = $exe_asset.browser_download_url
+          $response = Invoke-WebRequest -Uri $exe_url -Method Get -MaximumRedirection 0 -ErrorAction SilentlyContinue
+          if ($response.StatusCode -eq 302) { $exe_url = $response.Headers.Location }
+          $exe_content = Invoke-WebRequest -Uri $exe_url
+          $exe_hash = (Get-FileHash -InputStream $exe_content.RawContentStream -Algorithm SHA256).Hash
+          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo "EXE_URL=$exe_url" | Out-File -FilePath $env:GITHUB_ENV -Append
+          echo "EXE_HASH=$exe_hash" | Out-File -FilePath $env:GITHUB_ENV -Append
+
+      - name: Update Chocolatey Package Files
+        run: |
+          $version = $env:VERSION
+          $exe_url = $env:EXE_URL
+          $exe_hash = $env:EXE_HASH
+          (Get-Content chocolatey/anymex.nuspec) -replace '<version>.*</version>', "<version>$version</version>" | Set-Content chocolatey/anymex.nuspec
+          (Get-Content chocolatey/tools/chocolateyInstall.ps1) -replace '\$packageName = .*$', "\$packageName = 'com.ryan.anymex'" -replace '\$url = .*$', "\$url = '$exe_url'" -replace '\$checksum = .*$', "\$checksum = '$exe_hash'" | Set-Content chocolatey/tools/chocolateyInstall.ps1
+
+      - name: Commit Updated Chocolatey Files
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add chocolatey/anymex.nuspec chocolatey/tools/chocolateyInstall.ps1
+          git commit -m "Update Chocolatey package files to version $env:VERSION" || echo "No changes to commit"
+          git push
+
+      - name: Build Chocolatey Package
+        run: |
+          choco pack chocolatey/anymex.nuspec --outputdirectory chocolatey
+
+      - name: Push Chocolatey Package
+        env:
+          CHOCO_API_KEY: ${{ secrets.CHOCO_API_KEY }}
+        run: |
+          choco apikey --key $env:CHOCO_API_KEY --source https://push.chocolatey.org/
+          choco push chocolatey/com.ryan.anymex.$env:VERSION.nupkg --source https://push.chocolatey.org/
+
+      - name: Release Chocolatey Package
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "chocolatey/com.ryan.anymex.*.nupkg"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          allowUpdates: true
+          tag: ${{ github.ref_name }}
