fix: addressed IzzyOnDroid inclusion policy

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,6 +10,11 @@ android {
     compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
+     dependenciesInfo {
+        includeInApk = false
+        includeInBundle = false
+    }
+
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
